<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    tools:context=".BraceletsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:padding="5dp" />

    <CheckedTextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/item_name"
        android:textSize="25sp" />

    <CheckedTextView
        android:id="@+id/retail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/retail"
        android:textSize="25sp" />

    <CheckedTextView
        android:id="@+id/wholesale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/wholesale"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="5dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_to_cart" />

</LinearLayout>
</HorizontalScrollView>