
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/nivlogo1"
    android:orientation="vertical"
tools:context=".ShowMenuActivity">

    <Button
        android:id="@+id/necklaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"

        android:onClick="onOpenNecklaces"
        android:text="@string/necklaces" />

    <Button
        android:id="@+id/bracelets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="onOpenBracelets"
        android:text="@string/bracelets" />


    <Button
        android:id="@+id/earrings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:onClick="onOpenEarrings"
        android:text="@string/earrings" />


    <Button
        android:id="@+id/orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:onClick="onOpenOrders"
        android:text="@string/total_orders" />


</LinearLayout>